src/objects/Chatter_Auto_Follow__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Follow_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Follow User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Auto_Follows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Follow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Follow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Chatter Auto Follow</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Chatter Auto Follow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Auto Follows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>